--- a/src/assets/_styles.scss
+++ b/src/assets/_styles.scss
@@ -1,8 +1,9 @@
 $footer_bg-color: #044da0;
 $header_bg-color: #044da0;
 $search_button-color: #f13e51;
-$modal_button-color: #0b77dd;
+$blue-color: #0b77dd;
 $body_bg-color: #ecf4fc;
+$title-color:#3b4256;
 $low-grad-color: #004595;
 $high-grad-color: #2491f6;
 
