--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -1,3 +1,5 @@
+@import '../../assets/_styles';
+
 .CardList-Card{
     display: flex;
     height: 140px;
@@ -5,7 +7,16 @@
     margin-top: 32px;
     background-color: #fff;
     border-radius: 2px;
-    box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.25);
+    box-shadow: 0px 1px 4px 0px rgba(0,0,0,0.25);
+}
+
+.CardList-Card:hover{
+    margin-top: 27px;
+    box-shadow: 0px 16px 24px 0px rgba(0,0,0,0.35); 
+    
+    .CardList-CardTitle, .CardList-CardPlaces{
+        color: $blue-color;
+    }
 }
 
 .CardList-CardImg{
@@ -23,6 +34,7 @@
 }
 
 .CardList-CardTitle{
+    color: $title-color;
     font-size: 20px;
     font-weight: bold;
 }
@@ -33,5 +45,6 @@
 
     span{
         font-weight: bold;
+        margin-right: 12px;
     }
 }
