--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -1,6 +1,6 @@
 @import '../../assets/_styles';
 
-.CardList-Card{
+.Card{
     display: flex;
     height: 140px;
     width: 352px;
@@ -8,43 +8,45 @@
     background-color: #fff;
     border-radius: 2px;
     box-shadow: 0px 1px 4px 0px rgba(0,0,0,0.25);
-}
 
-.CardList-Card:hover{
-    margin-top: 27px;
-    box-shadow: 0px 16px 24px 0px rgba(0,0,0,0.35); 
-    
-    .CardList-CardTitle, .CardList-CardPlaces{
-        color: $blue-color;
+    &:hover{
+        margin-top: 27px;
+        box-shadow: 0px 16px 24px 0px rgba(0,0,0,0.35); 
+        
+        .Card-Title, .Card-Places{
+            color: $blue-color;
+        }
     }
-}
 
-.CardList-CardImg{
-    height: 65px;
-    width: 60px;
-    margin-left: 26px;
-    margin-top: 25px;
-}
+    &-Image{
+        height: 65px;
+        width: 60px;
+        margin-left: 26px;
+        margin-top: 25px;
+    }
 
-.CardList-CardInfo{
-    display: flex;
-    flex-direction: column;
-    margin-top: 25px;
-    margin-left: 36px;
-}
+    &-Info{
+        display: flex;
+        flex-direction: column;
+        margin-top: 25px;
+        margin-left: 36px;
+    }
 
-.CardList-CardTitle{
-    color: $title-color;
-    font-size: 20px;
-    font-weight: bold;
-}
-
-.CardList-CardPlaces{
-    margin-top: 50px;
-    color: #747e89;
-
-    span{
+    &-Title{
+        color: $title-color;
+        font-size: 20px;
         font-weight: bold;
-        margin-right: 12px;
+    }
+
+    &-Places{
+        display: flex;
+        margin-top: 50px;
+        color: #747e89;
+    
+        &_Count{
+            font-weight: bold;
+            margin-right: 14px;
+        }
     }
 }
+
