--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -1,9 +1,15 @@
 @import '../../assets/_styles';
-
-.Navigation{
+*{
+    margin: 0;
+    padding: 0;
+    }
+.Navigation-Top{
     font-family: $robo-font;
-    margin: 0 auto;
+    margin: -8px 0;
     width: 100%;
+    height: 54px;
    //max-width:1000px;
     border: 1px solid black;
+    background-color: #044da0;
+    display: flex;
 }
