--- a/src/assets/_styles.scss
+++ b/src/assets/_styles.scss
@@ -1,6 +1,8 @@
 $footer_bg-color: #044da0;
 $header_bg-color: #044da0;
 $search_button-color: #f13e51;
+$search_input-border: #c7ccd1;
+$search_input-color: #747e89;
 $blue-color: #0b77dd;
 $body_bg-color: #ecf4fc;
 $title-color:#3b4256;
