--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -11,5 +11,6 @@
    //max-width:1000px;
     border: 1px solid black;
     background-color: #044da0;
-    display: flex;
+    //display: flex;
+    //flex-direction: row;
 }
