Added Footer component. Added margins to other components

--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -33,7 +33,7 @@
     }
 
     &-Title{
-        color: $title-color;
+        color: $dark-gray;
         font-size: 20px;
         font-weight: bold;
     }
