--- a/src/components/DropDown/DropDown.scss
+++ b/src/components/DropDown/DropDown.scss
@@ -51,7 +51,7 @@
         display: flex;
         flex-direction: column;
         background-color: #fff;
-        
+        box-shadow: 0px 21px 24px 0px rgba(0,0,0,0.35); 
     }
 
     &-ListItem{
