--- a/src/components/SearchBar/SearchBar.scss
+++ b/src/components/SearchBar/SearchBar.scss
@@ -9,6 +9,7 @@
     background-color: #fff;
     border-radius: 2px;
     box-shadow: 0px 16px 24px 0px rgba(0,0,0,0.35); 
+    margin-bottom: 80px;
 
     &-Input{
         flex-grow: 1;
