--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -43,7 +43,7 @@
         margin-top: 50px;
         color: #747e89;
     
-        &_Count{
+        &-Count{
             font-weight: bold;
             margin-right: 14px;
         }
