--- a/src/components/Logo/Logo.scss
+++ b/src/components/Logo/Logo.scss
@@ -1,60 +1,45 @@
-.Header-Logo{
+.Header-Logo
+{ font-family: 'Open Sans';  font-size: 14px; 
+
     display: flex;
-    //flex-wrap: nowrap;
-    
+ float: left;  align-items: center; 
+//flex-wrap: nowrap;
     //flex-direction: column;
     //border: 1px black solid;
-    height: 95px;
-    align-items: center;
-    text-decoration: none;
-    font-size: 14px;
-    font-family: "Open Sans";
-    color: rgb(217, 222, 225);
-    float: left;
-    
-}
-.Header-Logo::before{
-display: inline-block;
-content: '';
-background-image: url(../../assets/Logo.png);
-width: 50px;
-height: 59px;
-margin-right: 20px;
+
+    height: 95px;  text-decoration: none;  color: rgb(217, 222, 225);
 }
 
-.Header-Logo-Kindergarten {
-    
-    font-size: 20px;
-    font-family: "Open Sans";
-    color: rgb(255, 255, 255);
-    font-weight: bold;
-    line-height: 1.2;
+.Header-Logo::before
+{
+    display: inline-block;  width: 50px;  height: 59px;  margin-right: 20px;
+ content: '';  background-image: url(../../assets/Logo.png); 
+}
 
+.Header-Logo-Kindergarten
+{ font-family: 'Open Sans'; 
+    font-size: 20px;  font-weight: bold;  line-height: 1.2;
+ color: rgb(255, 255, 255); 
+}
 
-  }
-  .Header-Logo-Kindergarten a{
-    
-    font-size: 20px;
-    font-family: "Roboto";
-    color: rgb(255, 255, 255);
-    font-weight: bold;
-    line-height: 1.2;
-    width:100%;
+.Header-Logo-Kindergarten a
+{ font-family: 'Roboto'; 
+    font-size: 20px;  font-weight: bold;  line-height: 1.2;  width: 100%;
+ color: rgb(255, 255, 255); 
+}
 
+.Header-Logo-Crimea
+{ font-family: 'Roboto'; 
+    font-size: 14px;  line-height: 1.714;
+ color: rgb(217, 222, 225); 
+}
 
-  }
-  .Header-Logo-Crimea {
-    font-size: 14px;
-    font-family: "Roboto";
-    color: rgb(217, 222, 225);
-    line-height: 1.714;
-
-  }
-  .Header-NavBlock a{
+.Header-NavBlock a
+{
     text-decoration: none;
-  }
+}
 
-  .Header-Logo-And-Text{
-      display: flex;
-      flex-direction: column;
-  }
+.Header-Logo-And-Text
+{
+    display: flex;  flex-direction: column;
+}
