Fixed DropDown, Button, Background

--- a/src/components/DropDown/DropDown.scss
+++ b/src/components/DropDown/DropDown.scss
@@ -9,6 +9,7 @@
     background-color: #fff;
     border-radius: 2px 0 0 2px;
     color: $dark-gray;
+    cursor: pointer;
     
     &_opened{
         background-color: #004595;
