--- a/src/components/Header-NavBlock-Links/Header-NavBlock-Links.scss
+++ b/src/components/Header-NavBlock-Links/Header-NavBlock-Links.scss
@@ -6,6 +6,10 @@
     a {
         padding-left: 25px;
 
+        font-size: 16px;
+
+        font-family: "Open Sans";
+
         color: white;
 
         &:hover {
@@ -15,3 +19,5 @@
         }
     }
 }
+
+  
