--- a/src/components/Logo/Logo.scss
+++ b/src/components/Logo/Logo.scss
@@ -36,7 +36,7 @@
 .Header-Logo-Kindergarten {
     color: rgb(255, 255, 255);
 
-    font-family: 'Open Sans';
+    font-family: "Open Sans";
 
     font-size: 20px;
 
@@ -49,7 +49,7 @@
     
         color: rgb(255, 255, 255);
     
-        font-family: 'Roboto';
+        font-family: "Open Sans";
     
         font-size: 20px;
     
@@ -81,3 +81,18 @@
 
     flex-direction: column;
 }
+
+
+.Обратная_связь {
+    font-size: 16px;
+    font-family: "Segoe UI";
+    color: rgb(255, 255, 255);
+    text-decoration: underline;
+    line-height: 1.2;
+    text-align: left;
+    position: absolute;
+    left: 1406px;
+    top: 92.798px;
+    z-index: 249;
+  }
+  
