--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -13,6 +13,7 @@
         display: flex;
         justify-content: space-between;
         color: #fff;
+        border: 1px solid red;
     }
 
     &-Info{
