--- a/src/components/Header-NavBlock/Header-NavBlock.scss
+++ b/src/components/Header-NavBlock/Header-NavBlock.scss
@@ -5,9 +5,9 @@
 
     justify-content: space-between;
 
-    //border: 1px black solid;
 
     height: 95px;
 
-    margin-top: 7px;
+    margin-top: 0px;
+    margin-bottom: 3px;
 }
