--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -7,15 +7,20 @@
 }
 
 .Navigation {
-    width: 100%;
+    display:flex;
 
-    height: 54px;
+    max-width: 1120px;
 
-    margin: -8px 0;
+    height: 53px;
 
-    border: 1px solid black;
-
-    background-color: #044da0;
+    margin: 0px auto;
 
     font-family: $robo-font;
+
+    
+}
+.BackgroundNavigation{
+    background-color: #044da0;
+    width: 100%;
+
 }
