--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -42,6 +42,8 @@
         display: flex;
         margin-top: 50px;
         color: #747e89;
+        position: absolute;
+        margin-top: 75px;
     }
     
     &-Count{
