--- a/src/components/NavBlock/NavBlock-Links/NavBlock-Links.scss
+++ b/src/components/NavBlock/NavBlock-Links/NavBlock-Links.scss
@@ -4,6 +4,7 @@
     align-items: center;
 
     a {
+        text-decoration: none;
         padding-left: 25px;
 
         font-size: 16px;
@@ -18,6 +19,24 @@
             color: white;
         }
     }
+    p{
+        text-decoration: none;
+        padding-left: 25px;
+
+        font-size: 16px;
+
+        font-family: "Roboto";
+
+        color: white;
+
+        &:hover {
+            text-decoration: underline;
+
+            color: white;
+            cursor: pointer;
+        }
+    }
+    
 }
 
   
